--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ scipy==1.2.0
 scikit-learn==0.20.3
 singledispatch==3.4.0.3
 six==1.12.0
-nltk==3.4
+nltk>=3.4.5
 opencv-contrib-python==4.0.0.21
 scikit-image==0.14.2
-Pillow==5.4.1
+pillow>=6.2.0
 Pattern==3.6
 magenta==1.0.5
 PyPrind==2.11.2
